--- a/FoodStore/Areas/Admin/Views/Brand/Index.cshtml
+++ b/FoodStore/Areas/Admin/Views/Brand/Index.cshtml
@@ -33,15 +33,15 @@ else
                         <td>@brand.CountryOfOrigin</td>
                         <td>
                             <a asp-area="Admin"
-                               asp-controller="Brand"
-                               asp-action="EditBrand"
-                               asp-route-id="@brand.Id"
-                               class="btn btn-sm btn-warning me-2">Edit</a>
+                            asp-controller="Brand"
+                            asp-action="EditBrand"
+                            asp-route-id="@brand.Id"
+                            class="btn btn-sm btn-warning me-2">Edit</a>
                             <a asp-area="Admin"
-                               asp-controller="Brand"
-                               asp-action="Delete"
-                               asp-route-id="@brand.Id"
-                               class="btn btn-sm btn-danger">Delete</a>
+                            asp-controller="Brand"
+                            asp-action="Delete"
+                            asp-route-id="@brand.Id"
+                            class="btn btn-sm btn-danger">Delete</a>
                         </td>
                     </tr>
                 }
@@ -58,9 +58,13 @@ else
                 </li>
             }
 
-            <li class="page-item active">
-                <span class="page-link">@Model.PageIndex</span>
-            </li>
+            @if (Model.TotalPages > 1)
+            {
+                <li class="page-item active">
+                    <span class="page-link">@Model.PageIndex</span>
+                </li>
+            }
+            
 
             @if (Model.HasNextPage)
             {
