--- a/FoodStore/Areas/Admin/Views/Brand/Index.cshtml
+++ b/FoodStore/Areas/Admin/Views/Brand/Index.cshtml
@@ -8,7 +8,7 @@
 
 <h2 class="mb-4">All Brands</h2>
 
-@if (!Model.Items.Any())
+@if (!Model.Any())
 {
     <div class="alert alert-warning">No brands available.</div>
 }
@@ -25,7 +25,7 @@ else
                 </tr>
             </thead>
             <tbody>
-                @foreach (var brand in Model.Items)
+                @foreach (var brand in Model)
                 {
                     <tr>
                         <td>@brand.Id</td>
