--- a/FoodStore/Areas/Admin/Views/OrderManagement/Index.cshtml
+++ b/FoodStore/Areas/Admin/Views/OrderManagement/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using FoodStore.ViewModels.Admin
+﻿@using FoodStore.ViewModels
+@using FoodStore.ViewModels.Admin
 @model OrderFilterViewModel
 
 @{
@@ -58,3 +59,29 @@
         }
     </tbody>
 </table>
+
+<nav>
+    <ul class="pagination">
+        @if (Model.Orders.HasPreviousPage)
+        {
+            <li class="page-item">
+                <a class="page-link" asp-action="Index" asp-route-page="@(Model.Orders.PageIndex - 1)">Previous</a>
+            </li>
+        }
+
+        @if (Model.Orders.TotalPages > 1)
+        {
+            <li class="page-item active">
+                <span class="page-link">@Model.Orders.PageIndex</span>
+            </li>
+        }
+
+
+        @if (Model.Orders.HasNextPage)
+        {
+            <li class="page-item">
+                <a class="page-link" asp-action="Index" asp-route-page="@(Model.Orders.PageIndex + 1)">Next</a>
+            </li>
+        }
+    </ul>
+</nav>
