--- a/FoodStore/Areas/Admin/Views/Reports/Orders.cshtml
+++ b/FoodStore/Areas/Admin/Views/Reports/Orders.cshtml
@@ -1,4 +1,5 @@
-﻿@using FoodStore.ViewModels.Admin
+﻿@using FoodStore.ViewModels
+@using FoodStore.ViewModels.Admin
 @model OrdersReportPageViewModel
 @{
     ViewData["Title"] = "Orders Report";
@@ -90,4 +91,42 @@ else
         </tbody>
         </table>    
     </div>
+
+    @if (Model.Reports.TotalPages > 1)
+    {
+        <ul class="pagination">
+            @if (Model.Reports.HasPreviousPage)
+            {
+                <li class="page-item">
+                    <a class="page-link"
+                       asp-route-page="@(Model.Reports.PageIndex - 1)"
+                       asp-route-filter="@Context.Request.Query["filter"]">
+                        Previous
+                    </a>
+                </li>
+            }
+
+            @for (int i = 1; i <= Model.Reports.TotalPages; i++)
+            {
+                <li class="page-item @(i == Model.Reports.PageIndex ? "active" : "")">
+                    <a class="page-link"
+                       asp-route-page="@i"
+                       asp-route-filter="@Context.Request.Query["filter"]">
+                        @i
+                    </a>
+                </li>
+            }
+
+            @if (Model.Reports.HasNextPage)
+            {
+                <li class="page-item">
+                    <a class="page-link"
+                       asp-route-page="@(Model.Reports.PageIndex + 1)"
+                       asp-route-filter="@Context.Request.Query["filter"]">
+                        Next
+                    </a>
+                </li>
+            }
+        </ul>
+    }
 }
