--- a/FoodStore/Areas/Admin/Views/UserManagement/Index.cshtml
+++ b/FoodStore/Areas/Admin/Views/UserManagement/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@using FoodStore.ViewModels.Admin
-@model IEnumerable<UserViewModel>
+﻿@using FoodStore.ViewModels
+@using FoodStore.ViewModels.Admin
+@model PaginatedList<UserViewModel>
 
 @{
     ViewData["Title"] = "Manage Users";
@@ -59,3 +60,31 @@
         </tbody>
     </table>
 </div>
+
+<nav>
+    @if (Model.TotalPages > 1)
+    {
+        <ul class="pagination">
+            @if (Model.HasPreviousPage)
+            {
+                <li class="page-item">
+                    <a class="page-link" asp-action="Index" asp-route-pageIndex="@(Model.PageIndex - 1)">Previous</a>
+                </li>
+            }
+
+            @for (int i = 1; i <= Model.TotalPages; i++)
+            {
+                <li class="page-item @(i == Model.PageIndex ? "active" : "")">
+                    <a class="page-link" asp-action="Index" asp-route-pageIndex="@i">@i</a>
+                </li>
+            }
+
+            @if (Model.HasNextPage)
+            {
+                <li class="page-item">
+                    <a class="page-link" asp-action="Index" asp-route-pageIndex="@(Model.PageIndex + 1)">Next</a>
+                </li>
+            }
+        </ul>
+    }
+</nav>
