--- a/FoodStore/Views/Shared/_Layout.cshtml
+++ b/FoodStore/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
                                   style="min-width: 200px; position: absolute; right: 0; top: 100%; display: none;">
 
                                 <div class="input-group input-group-sm">
-                                    <input type="text" name="query" class="form-control" placeholder="Search..." />
+                                    <input type="text" name="query" class="form-control" placeholder="Search..." **required** />
                                     <button type="submit" class="btn btn-outline-secondary">
                                         <i class="bi bi-search"></i>
                                     </button>
